haskell-unixutils (1.33) unstable; urgency=low

  * Add collectResult.
  * Remove verbosity level that only prints stderr.  Its now 0=everthing, 
    1=command & dots & result, 2=command, 3=silent.  Note we are also
    omitting command & result.

 -- David Fox <dsf@seereason.com>  Wed, 29 Dec 2010 15:42:33 -0800

haskell-unixutils (1.32) unstable; urgency=low

  * Move the new subprocess progress reporting code from debian-repo into
    System.Unix.Progress, move existing module to OldProgress.
  * Add quietness control to progress reporting.

 -- David Fox <dsf@seereason.com>  Tue, 28 Dec 2010 12:19:36 -0800

haskell-unixutils (1.31) unstable; urgency=low

  * Remove exitCodesOnly, and change exitCodeOnly signature to [Output] ->
    ExitCode, having convinced myself that the list will always contain
    exactly one Result element.

 -- David Fox <dsf@seereason.com>  Mon, 27 Dec 2010 05:01:02 -0800

haskell-unixutils (1.30) unstable; urgency=low

  * Rename exitCodeOnly -> exitCodesOnly because it returns a list, add
    exitCodeOnly which returns a single exit code, if the output stream
    does not have exactly one exit code it will raise an exception.
  * Split the strict process functions (simpleCommand, processOuput,
    simpleProcess, commandResult, commandOutput) into a ProcessStrict
    module and mark them deprecated.
  * Remove System.Unix.List, it contained two aliases for intercalate.
  * Change signature of System.Unix.Mount.unmount due to switch from
    simpleCommand to lazyCommand.

 -- David Fox <dsf@seereason.com>  Sun, 26 Dec 2010 07:03:06 -0800

haskell-unixutils (1.29) unstable; urgency=low

  * Added System.Unix.Crypt

 -- Jeremy Shaw <jeremy@seereason.com>  Mon, 06 Dec 2010 19:26:39 -0600

haskell-unixutils (1.28) unstable; urgency=low

  * Restrict the process package to versions less than 3, per
    Adam Bergmark.

 -- David Fox <dsf@seereason.com>  Fri, 19 Nov 2010 11:10:55 -0800

haskell-unixutils (1.27) unstable; urgency=low
